--- a/index.html
+++ b/index.html
@@ -5,8 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock paper scissors</title>
-    <script src="index.js"></script>
+    <script src="index.js" defer></script>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
+<div class="parent">
+    <div class="playstation">
+        <div class="playerSide">
+            <div class="playerTitle">PLAYER</div>
+            <div class="buttons">
+                <button  class="rock"  >ROCK</button>
+                <button class="paper" >PAPER</button>
+                <button class="scissors">SCISSORS</button>
+            </div>
+        </div>
+        <div class="computerSide">
+            <div class="compTitle">COMPUTER</div>
+            <p class="compChoice"></p>
+        </div>
+    </div>
+    <div class="scoreStation">
+        <div class="textPart">FIRST ONE TO FIVE WINS , BATTLE!!!</div>
+        <div class="scorePart">
+            <div class="humanScore">
+                
+                <div class="hScoreInject"></div>
+            </div>
+            <div class="computerScore">
+                
+                <div class="CscoreInject"></div>
+            </div>
+        </div>
+        <div class="finalScore"></div>
+    </div>
+</div>    
 </body>
 </html>
