added more text for understandability

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="parent">
     <div class="playstation">
         <div class="playerSide">
-            <div class="playerTitle">PLAYER</div>
+            <div class="playerTitle">Press any button to start game</div>
             <div class="buttons">
                 <button  class="rock"  >ROCK</button>
                 <button class="paper" >PAPER</button>
@@ -25,7 +25,8 @@
         </div>
     </div>
     <div class="scoreStation">
-        <div class="textPart">FIRST ONE TO FIVE WINS , BATTLE!!!</div>
+        <div class="reporter"></div>
+        <div class="textPart">FIRST ONE TO FIVE WINS , SCORE WILL APPEAR BELOW</div>
         <div class="scorePart">
             <div class="humanScore">
                 
